# Listing files to compile
sources = files (
    'Controllers/DirectoryController.vala',
    'Controllers/PlayerController.vala',

    'Models/Countries.vala',
    'Models/Genre.vala',
    'Models/Station.vala',

    'Providers/RadioBrowser.vala',

    'Services/DBusMediaPlayer.vala',
    'Services/DBusInterface.vala',
    'Services/DataProvider.vala',
    'Services/HttpClient.vala',
    'Services/StarStore.vala',

    'Widgets/base/AbstractContentList.vala',
    'Widgets/base/DisplayButton.vala',
    'Widgets/base/RevealLabel.vala',
    'Widgets/base/CyclingRevealLabel.vala',
    'Widgets/base/StationListBox.vala',
    'Widgets/base/ContentBox.vala',

    'Widgets/HeaderBar.vala',
    'Widgets/HeaderLabel.vala',
    'Widgets/PlayButton.vala',
    'Widgets/StationButton.vala',
    'Widgets/StationContextMenu.vala',
    'Widgets/Display.vala',
    'Widgets/Window.vala',
    'Widgets/AboutDialog.vala',
    'Widgets/CountryList.vala',
    'Widgets/StationList.vala',
    'Widgets/PreferencesPopover.vala',

    'Settings.vala',
    'Application.vala',
    'Main.vala'
)
